--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "shadcn-ui": "^0.9.5",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.1.0",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.0.14",
     "zod": "^3.24.2"
   },
